syntax = "proto3";

import "Proto_Common.proto";
package YouYou.Proto;

//玩家向服务器发送创建角色消息
message C2WS_CreateRole
{
    int32 JobId = 1;//职业编号
    int32 Sex = 2;//性别
    string NickName = 3;//昵称
}

//玩家向服务器发送查询已有角色消息
message C2WS_GetRoleList
{

}

//玩家向服务器发送进入游戏消息
message C2WS_EnterGame
{
	int64 RoleId = 1;//角色编号
}